# pyinstaller-hooks-contrib

./: .gitignore  .pyup.yml  .travis.yml  19.new.rst  CHANGELOG.rst  LICENSE  LICENSE.APL.txt  LICENSE.GPL.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-releaser.yml  hook-countryinfo.py  hook-pycountry.py  hooks-config.rst  pyproject.toml  pytest.ini  requirements-release.txt  requirements-test-libraries.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  new-hook-request.md
.github/workflows/: lint.yml  macos-test.yml  oneshot-test.yml  pr-test.yml  pyup-test.yml  release.yml  scheduled-test.yml  validate-new-news.yml
_pyinstaller_hooks_contrib/: __init__.py  compat.py
_pyinstaller_hooks_contrib/pre_safe_import_module/: hook-win32com.py
_pyinstaller_hooks_contrib/rthooks/: pyi_rth_findlibs.py  pyi_rth_osgeo.py  pyi_rth_pyqtgraph_multiprocess.py  pyi_rth_usb.py
_pyinstaller_hooks_contrib/stdhooks/: hook-OpenGL.py  hook-adbc_driver_manager.py  hook-apkutils.py  hook-atomics.py  hook-av.py  hook-bitsandbytes.py  hook-black.py  hook-blib2to3.py  hook-capstone.py  hook-chardet.py  hook-charset_normalizer.py  hook-clr.py  hook-cryptography.py  hook-cumm.py  hook-dash.py  hook-dask.py  hook-dateparser.py  hook-dateutil.py  hook-ddgs.py  hook-deprecated.py  hook-distributed.py  hook-duckdb.py  hook-eccodeslib.py  hook-eckitlib.py  hook-emoji.py  hook-enchant.py  hook-fake_useragent.py  hook-fckitlib.py  hook-ffpyplayer.py  hook-frictionless.py  hook-fsspec.py  hook-gcloud.py  hook-globus_sdk.py  hook-gribapi.py  hook-h5py.py  hook-imagingcontrol4.py  hook-intake.py  hook-itk.py  hook-langchain.py  hook-langchain_classic.py  (+69 more)
_pyinstaller_hooks_contrib/utils/: mypy.py  vtkmodules.py
news/: 100.new.rst  1001.new.rst  1004.update.rst  1005.new.rst  1008.new.rst  101.new.rst  1010.new.rst  1014.update.rst  1015.update.rst  1016.update.rst  1019.process.rst  1021.update.rst  1024.update.rst  1026.update.rst  103.new.rst  107.update.rst  108.update.rst  11.new.rst  112.new.rst  113.update.rst  114.new.rst  116.update.rst  119.new.rst  12.new.rst  120.new.rst  122.new.rst  123.new.rst  124.update.rst  125.new.rst  126.new.rst  128.1.new.rst  128.2.new.rst  128.3.new.rst  133.update.rst  134.new.rst  138.new.rst  139.new.rst  16.new.rst  21.new.rst  22.new.rst  (+421 more)
scripts/: cloud-test.py  verify-news-fragments.py
src/_pyinstaller_hooks_contrib/: __init__.py
src/_pyinstaller_hooks_contrib/hooks/pre_safe_import_module/: hook-tensorflow.py
src/_pyinstaller_hooks_contrib/hooks/rthooks/: hook-ibm_db.py  pyi_rth_cryptography_openssl.py  pyi_rth_enchant.py  pyi_rth_nltk.py  pyi_rth_osgeo.py
src/_pyinstaller_hooks_contrib/hooks/stdhooks/: hook-HtmlTestRunner.py  hook-IPython.py  hook-OpenGL.py  hook-PyTaskbar.py  hook-accessible_output2.py  hook-adbutils.py  hook-apscheduler.py  hook-astropy.py  hook-aumbry.py  hook-av.py  hook-azurerm.py  hook-backports.py  hook-bokeh.py  hook-branca.py  hook-cairocffi.py  hook-cairosvg.py  hook-celpy.py  hook-cloudpickle.py  hook-clr.py  hook-coincurve  hook-cryptography.py  hook-cv2.py  hook-dbus_fast.py  hook-dclab.py  hook-docx2pdf.py  hook-enchant.py  hook-eth_hash.py  hook-eth_keys.py  hook-exchangelib.py  hook-fairscale.py  hook-falcon.py  hook-fiona.py  hook-flirpy.py  hook-gcloud.py  hook-gmplot.py  hook-googleapiclient.model.py  hook-graphql_query.py  hook-gribapi.py  hook-grpc.py  hook-hexbytes.py  (+78 more)
src/_pyinstaller_hooks_contrib/hooks/utils/: nvidia_cuda.py
src/_pyinstaller_hooks_contrib/stdhooks/: hook-nvidia.nvtx.py  hook-tensorflow.py
src/_pyinstaller_hooks_contrib/tests/: conftest.py  test_deep_learning.py  test_libraries.py  test_pytorch.py  test_scikit_image.py  test_scikit_learn.py
tests/: test_deep_learning.py  test_libraries.py  test_nicegui.py  test_pytorch.py  test_scikit_image.py  test_scikit_learn.py  test_selectolax.py  test_tensorflow.py  test_trame.py  test_vtkmodules.py
tests/scripts/: pyi_toga_app.py
(+2 files in other folders)
