[sdist]
formats=gztar

[bdist_wheel]
universal=1

[metadata]
name         = pyinstaller-hooks-contrib
version      = attr: _pyinstaller_hooks_contrib.__version__
description  = Community maintained hooks for PyInstaller
url          = https://github.com/pyinstaller/pyinstaller-hooks-contrib
download-url = https://pypi.org/project/pyinstaller-hooks-contrib
keywords     = pyinstaller development hooks
classifiers  =
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
  License :: OSI Approved :: Apache Software License
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
maintainer = Legorooj
maintainer_email = legorooj@protonmail.com
long_description_content_type = text/markdown
long-description = file: README.md

[options]
zip_safe = false
include_package_data = true
package_dir=
  =src
packages=find:
python_requires = >=3.7

[options.packages.find]
where=src

[options.package_data]
* = *.txt

[flake8]
# E265 - block comment should start with '# '
extend-ignore = E265
max-line-length=120
