[sdist]
formats=gztar

[metadata]
name         = pyinstaller-hooks-contrib
version      = attr: _pyinstaller_hooks_contrib.__version__
description  = Community maintained hooks for PyInstaller
url          = https://github.com/pyinstaller/pyinstaller-hooks-contrib
download_url = https://pypi.org/project/pyinstaller-hooks-contrib
keywords     = pyinstaller development hooks
classifiers  =
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
  License :: OSI Approved :: Apache Software License
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
maintainer = Legorooj
maintainer_email = legorooj@protonmail.com
long_description_content_type = text/markdown
long_description = file: README.md

[options]
zip_safe = false
include_package_data = true
packages=find:
python_requires = >=3.8
install_requires =
    setuptools >= 42.0.0
    importlib_metadata >= 4.6 ; python_version < "3.10"
    packaging >= 22.0

[options.packages.find]
include = _pyinstaller_hooks_contrib*

[options.package_data]
* = *.txt

[flake8]
# E265 - block comment should start with '# '
extend-ignore = E265
max-line-length=120

[tool:pytest]
# Display summary info for (s)skipped, (f)failed and (E)errored tests.
# Do not enable summary for (x)xfailed and (X)xpassed tests, because as
# of pytest-dev/pytest#11233, this includes full tracebacks.
# Skip doctest text files
addopts=--maxfail=3 -m "not slow" -v -rsfE --doctest-glob=

markers =
    darwin: only run on macOS
    linux: only runs on GNU/Linux
    win32: only runs on Windows
    slow: Long tests are disabled by default. Re-enable with -m slow
